add/remove queue member
