# wazo_ctid_queue/plugin.py
@@ -8,6 +8,8 @@ from xivo_auth_client import Client as AuthClient
 from .resources import (
     QueuesResource,
     QueueResource,
+    QueueAddMemberResource,
+    QueueRemoveMemberResource,
     )
 from .services import QueueService
 from .bus_consume import QueuesBusEventHandler
@@ -34,3 +36,5 @@ class Plugin(object):
 
         api.add_resource(QueuesResource, '/queues', resource_class_args=[queues_service])
         api.add_resource(QueueResource, '/queues/<queue_name>', resource_class_args=[queues_service])
+        api.add_resource(QueueAddMemberResource, '/queues/<queue_name>/add_member', resource_class_args=[queues_service])
+        api.add_resource(QueueRemoveMemberResource, '/queues/<queue_name>/remove_member', resource_class_args=[queues_service])
